migrated bloglist page in the as-is state

--- a/markdown/post-calc-food.mdx
+++ b/markdown/post-calc-food.mdx
@@ -1,5 +1,5 @@
-<BlogImage src={props.image} alt={props.alt} />
-<BlogInfo day={props.day} month={props.month} title={props.title} />
+<BlogImage  />
+<BlogInfo  />
 
 Are you hosting a house welcoming party for yourself or a loved one? Do you want a 
 way to consolidate the food you prepare for church social events? If so, then you need 
@@ -12,7 +12,7 @@ knowing all the food you bought was consumed.
 Be sure to read below for a party planning 101 guide on how to calculate the serving 
 sizes of food for your guests.
 
-<MobileAd showAd={props.showAd} adStyle={props.adStyle} />
+<MobileAd />
 
 ## 1. Invest in an Event Planning Tool
 
@@ -31,7 +31,7 @@ That's why it's always helpful to use in an [event planning tool](https://pitchi
 It allows you to schedule each of your events in thorough detail. You can schedule the event 
 easily, add to or edit your guest list, and track who's coming and what they're pitching in.
 
-<MobileAd showAd={props.showAd} adStyle={props.adStyle} />
+<MobileAd />
 
  ## 2. Think in Terms of Courses
 
@@ -64,7 +64,7 @@ Whichever course of action you take (pun intended), be sure to stick to the 1 po
 that you should offer one pound of food for every adult in attendance. If there will be children, 
 then calculate 1/2 pound for each of them.
 
-<MobileAd showAd={props.showAd} adStyle={props.adStyle} />
+<MobileAd />
 
 ## 3. Careful With Variety
 
@@ -80,7 +80,7 @@ During these unprecedented times, you'll want to make everything packaged anyway
 back on the temptation for people to hog one particular food dish, giving you more control 
 in the process. Not to mention that it's safer for the health of your guests.
         
-<MobileAd showAd={props.showAd} adStyle={props.adStyle} />
+<MobileAd />
 
 ## 4. Think About the Time of the Event
 
@@ -92,7 +92,7 @@ get off from work) and say "food will be provided", you'd better have a heavy sp
 However, if your event is in those in-between spots, such as 10am to 11am or 3pm to 4pm, 
 you can get away with serving lighter portions.
 
-<MobileAd showAd={props.showAd} adStyle={props.adStyle} />
+<MobileAd />
 
 ## 5. Offer Different Platters
 
@@ -112,7 +112,7 @@ Think about offering platters such as:
 These are exceptional options for events where people will be mingling and walking to and from. 
 They can grab a handful of snacks and converse with people as they chip away at their plate.
 
-<MobileAd showAd={props.showAd} adStyle={props.adStyle} />
+<MobileAd />
 
 Now that you have seen several ways to provide ample food serving sizes for your guests, 
 be sure to use this advice to your advantage.
