--- a/markdown/group-event-planning.mdx
+++ b/markdown/group-event-planning.mdx
@@ -1,38 +1,71 @@
 <BlogImage  />
 <BlogInfo  />
 
+Looking to plan a group event, but you don’t know where to start? No worries, we can help you with that.
+
+Group event planning can be a very daunting task. There are so many moving parts and the responsibilities 
+and duties can be overwhelming for some. With our help, we’ll get you started with the most important parts.
 
 <MobileAd />
 
-## 1. Invest in an Event Planning Tool
+## Starting Off
 
+To start off, you need to find a team. While you can totally plan an event on your own, it always helps 
+to have some extra hands. Where do you start? In terms of general planning, it would be best to get one 
+to three other people to help you. This all depends on the size of your group event. Once you have them, they can help call places and help keep track of your money.
 
+If you’re looking at events involving children, any sort of youth group event ideas, then you’ll need 
+chaperones at some point in the process. While not necessary right away, it’s a good idea to start trying to 
+lock people down so that way you aren’t short when the time comes.
 
- [event planning tool](https://pitchinclub.com/resources/event-planning-tools). 
+Another good idea to make the process easier and more organized is to look into an event planning aid like 
+[The Pitch In Club](https://pitchinclub.com/resources/features).
+Our service allows you to schedule your event, invite people, and keep track of 
+all of your attendees and what if they're bringing anything. It’s a free service made to ease your event 
+planning so take a look!
 
+## Determine Your Event
+
+The next step in your group event planning process is to decide what your event actually is. You may want 
+to start off with a brainstorming session with your team to come up with some group event ideas. It may 
+even help to look at other group events that you’ve organized in the past to help sprout some ideas.
+
+It’s also likely that you already have an idea for an event and that’s perfect. Make sure you share it 
+with your team and work out any kinks within. Once you’re good to go, it’s time to move to the next step.
 
 <MobileAd />
 
- ## 2. Think in Terms of Courses
+## Create Your Budget
 
+[Creating your budget](https://www.nerdwallet.com/blog/finance/how-to-build-a-budget/)
+is probably the most important part of the planning process as however much money 
+you have available dictates everything you’ll do from this point on. Sit down with your team and bust 
+out a notebook.
 
-- Appetizers
-- Entrees
-- Fruit Trays
-- Veggie Trays
-- Salads
-- Deserts
-- [Finger Foods](https://www.goodhousekeeping.com/food-recipes/party-ideas/g30794570/finger-food-ideas/) (served during the entirety of your event)
-- Coffee
-- Beer and Alcohol (if you've decided to serve alcohol)
+How big is your event going to be? The budget is ruled by the scope of your event so you need to make sure that 
+your event idea is feasible for your financial situation, which leads to the next question.
 
+How are you gaining the funds for this event? Is it coming from your own pockets, are you being given a 
+budget, or are you attempting to find sponsors for the event? This is another crucial aspect of your 
+budget because as we said earlier: the amount of available money will dictate your event.
+## Location, Time, and Day
 
+With your newfound budget, it’s time to solidify your group event. Before you find a location, it’s a good 
+idea to determine a time and day first. Go over your teams’ schedules to see when the best day to host 
+your group event is
 
+After this, you’ll need to 
+[find a venu](https://blog.bizzabo.com/how-to-find-event-venues).
+You need to make sure that the venue stays within your budget so that you still have money to get the event 
+together. If it’s an event with kids, make sure it is safe for them.
 
+<MobileAd />
 
-If you need people to pitch in to help with food preparations, you may want to consider using the 
-[Helping Hands List](https://pitchinclub.com/resources/helping-hands) feature in this
-[free event planning tool](https://pitchinclub.com) free event planning tool.
+## The Perfect Group Event
 
-Be sure to read this article for more information on [planning outdoor events](https://pitchinclub.com/blog/outdoor-events-everything-you-need-to-consider) 
-and everything that you should think through.
+Now that you’ve created the backbone of your group event, it’s time to start filling in the cracks. If you 
+need any help, be sure to take a look at our free services.  If you liked this article and would like to 
+see more content like this, be sure to check out the rest of 
+[our blog](https://pitchinclub.com/blog/list/1).
+
+<MobileAd />
