moved all blog components from pages to components/blog directory

--- a/markdown/post0001.mdx
+++ b/markdown/post0001.mdx
@@ -123,3 +123,5 @@ If you need people to pitch in to help with food preparations, you may want to c
 
 Be sure to read this article for more information on [planning outdoor events](https://pitchinclub.com/blog/outdoor-events-everything-you-need-to-consider) 
 and everything that you should think through.
+
+<MobileAd />
