added trace function and changed blog url from blog/list to blog/page

--- a/markdown/post0003.mdx
+++ b/markdown/post0003.mdx
@@ -64,6 +64,6 @@ In doing so you'll also build better relationships with your team, increasing tr
 commitment. If you're getting overloaded with work, don't be afraid to use your team and give them their chance to shine.
 
 For more ideas on getting organized and productive, check out our latest 
-[blog articles here](https://pitchinclub.com/blog/list/1).
+[blog articles here](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
