--- a/markdown/post0006.mdx
+++ b/markdown/post0006.mdx
@@ -66,6 +66,6 @@ together. If it’s an event with kids, make sure it is safe for them.
 Now that you’ve created the backbone of your group event, it’s time to start filling in the cracks. If you 
 need any help, be sure to take a look at our free services.  If you liked this article and would like to 
 see more content like this, be sure to check out the rest of 
-[our blog](https://pitchinclub.com/blog/list/1).
+[our blog](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
