--- a/markdown/post0008.mdx
+++ b/markdown/post0008.mdx
@@ -64,6 +64,6 @@ like Kosmi and Chrome applications like Netflix Party, you'll be watching in no 
 A watch party is a great way to connect with your friends and your family and now you know how to host one!
 If the stress of party planning is overwhelming, be sure to check out our event planning services. If you liked 
 this article and would like to see more like it, be sure to check out the rest of
-[our blog](https://pitchinclub.com/blog/list/1)
+[our blog](https://pitchinclub.com/blog/page/1)
 
 <MobileAd />
