--- a/markdown/post0012.mdx
+++ b/markdown/post0012.mdx
@@ -118,6 +118,6 @@ Planning a music event is a serious endeavor to take on, especially for beginner
 top tips for planning a successful event. 
 
 For other event planning ideas, check out our
-[blog](https://pitchinclub.com/blog/list/1)
+[blog](https://pitchinclub.com/blog/page/1)
 
 <MobileAd />
