--- a/markdown/post0014.mdx
+++ b/markdown/post0014.mdx
@@ -76,7 +76,7 @@ planning a potluck can be a stress-free way to enjoy the company of friends. Wit
 and clear communication with guests, you can create a super-fun celebration for everyone.
 
 Hope these tips were helpful. For more event planning tips, check out our
-[blog](https://pitchinclub.com/blog/list/1).
+[blog](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
 
