--- a/markdown/post0015.mdx
+++ b/markdown/post0015.mdx
@@ -114,6 +114,6 @@ This software is made for simple planning, tracking, and organization so that yo
 everything runs smoothly.                                                           
 
 Hope these tips were helpful. If you would like to learn about other event planning tips, 
-please check out our [blog](https://pitchinclub.com/blog/list/1)
+please check out our [blog](https://pitchinclub.com/blog/page/1)
 
 <MobileAd />
