--- a/markdown/post0016.mdx
+++ b/markdown/post0016.mdx
@@ -92,6 +92,6 @@ to provide food when you are on a budget!
 
 We hope this guide of volunteer tracking tools and tips has given you the information you need to put on your perfect non-profit event. 
 If you would like to find out about other event planning tips, check out our
-[blog](https://pitchinclub.com/blog/list/1).
+[blog](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
