--- a/markdown/post0017.mdx
+++ b/markdown/post0017.mdx
@@ -53,7 +53,7 @@ planner to get what they need ahead of time and not have to worry about collecti
 Overall, Pitch In Club can make it easy for future football parties.
 
 Thank you for checking us out. Hopefully this was helpful. 
-For more event planning tips, check out our [blog](https://pitchinclub.com/blog/list/1)
+For more event planning tips, check out our [blog](https://pitchinclub.com/blog/page/1)
 where you can get ideas like how to get people to help with things such as
 [set up and clean up](https://pitchinclub.com/blog/party-set-up-and-after-party-clean-up)
 
