--- a/markdown/post0019.mdx
+++ b/markdown/post0019.mdx
@@ -89,6 +89,6 @@ next event!
 
 Thank you for checking us out. Hopefully this was helpful.
 For more event planning tips, check out our
-[blog](https://pitchinclub.com/blog/list/1)
+[blog](https://pitchinclub.com/blog/page/1)
 
 <MobileAd />
