--- a/markdown/post0020.mdx
+++ b/markdown/post0020.mdx
@@ -38,6 +38,6 @@ You may want to consider it next time you plan your next event.
 Remember, a little help goes a long way, and a shared task list is the best way to get it done. 
 
 Thanks for checking us out. For more helping hand ideas, head over to our
-[blog](https://pitchinclub.com/blog/list/1).
+[blog](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
