--- a/markdown/post0021.mdx
+++ b/markdown/post0021.mdx
@@ -49,7 +49,7 @@ for those who aren’t able to physically assist but can still offer some suppor
 together even if they’re physically apart.
 
 If ever you want to organize a group of helping hands, have them join the [Pitch In Club](https://pitchinclub.com). 
-For more helping hand ideas, check out our [blog](https://pitchinclub.com/blog/list/1).
+For more helping hand ideas, check out our [blog](https://pitchinclub.com/blog/page/1).
 
 Thanks for checking us out.
 
