--- a/markdown/post0022.mdx
+++ b/markdown/post0022.mdx
@@ -87,7 +87,7 @@ is the ability to create a Contribution or Helping Hands sign up. This allows yo
 which makes it an ideal companion for the DIY party planner. 
 
 Thank you for checking us out. Hopefully this was helpful. For more easy party planning tips, 
-check out our [blog](https://pitchinclub.com/blog/list/1).
+check out our [blog](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
 
