--- a/markdown/post0023.mdx
+++ b/markdown/post0023.mdx
@@ -74,6 +74,6 @@ responding, you can easily track who’s coming and who was nice enough to offer
 the merrier. That's what the "Pitch In Club" is all about.
 
 Thank you for checking us out. For more helping hand ideas, head to our 
-[blog](https://pitchinclub.com/blog/list/1).
+[blog](https://pitchinclub.com/blog/page/1).
 
 <MobileAd />
