--- a/markdown/post0024.mdx
+++ b/markdown/post0024.mdx
@@ -82,6 +82,6 @@ Task by task, you and your "pitch in crew" will be able to work your way through
 anxiety to a minimum.
 ---
 Thank you for checking us out. Hopefully this was helpful. For more easy party planning tips, check out our 
-[blog](https://pitchinclub.com/blog/list/1)
+[blog](https://pitchinclub.com/blog/page/1)
 
 <MobileAd />
