--- a/markdown/post0025.mdx
+++ b/markdown/post0025.mdx
@@ -54,6 +54,6 @@ need if you will have ongoing planning for such things as book clubs, outings, a
 work events, and various other functions. 
 
 Thank you for checking us out. Hopefully this was helpful. For more easy party planning tips, check out our
-[blog](https://pitchinclub.com/blog/list/1)
+[blog](https://pitchinclub.com/blog/page/1)
 
 <MobileAd />
